[package]
name = "project_calamity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
json = "0.12.4"
log = "0.4.20"
rand = "0.8.5"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
bytemuck = { version = "1.14.3", features = ["derive"] }
cgmath = "0.18.0"
image = "0.24.8"
wgpu = "0.18.0"
winit = { version = "0.29.10", features = ["rwh_05"] }
pollster = "0.3.0"
simplelog = "0.12.1"
noise = "0.8.2"
